# hmf-ics

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deny.yml  sbom.yml  security.yml
bins/hmf-device/: Cargo.toml
bins/hmf-device/src/: main.rs
bins/hmf-warden/: Cargo.toml
bins/hmf-warden/src/: main.rs
crates/hmf-core/: Cargo.toml
crates/hmf-core/src/: crypto.rs  envelope.rs  error.rs  ids.rs  lib.rs
crates/hmf-core/src/crypto/: ed25519.rs  hash.rs
crates/hmf-core/src/envelope/: sign.rs  signing_bytes.rs  types.rs
crates/hmf-transport/: Cargo.toml
crates/hmf-transport/src/: error.rs  lib.rs  record.rs
crates/hmf-transport/src/transport/: tcp.rs
crates/hmf-wire-proto/: Cargo.toml  build.rs
crates/hmf-wire-proto/proto/: command.proto  common.proto  config.proto  engineering.proto  envelope.proto  telemetry.proto
crates/hmf-wire-proto/src/: error.rs  lib.rs
crates/hmf-wire-proto/src/convert/: v1.rs
crates/hmf-wire-proto/src/wire/: protobuf.rs
docs/: README.md  invariants.md
docs/00-charter/: charter.md  design-principles.md  glossary.md  implementation-guide.md
docs/01-architecture/: federation.md  network-zones-and-trust-boundaries.md  operator-interface-architecture.md  reference-architecture.md  runtime-and-dispatch.md
docs/02-protocol/: REQ-index.md  audit.md  envelope.md  key-management.md  receiver-validation.md  replay-and-freshness.md  transport.md  versioning.md
docs/03-security/: security-invariants.md  threat-model.md
docs/04-operations/: deployment-and-failure-modes.md  event-and-audit-plane.md
docs/05-compliance/: compliance-notes.md
docs/06-testing/: conformance-checklist.md  conformance.md
docs/adr/: 0001-layering-core-vs-wire.md  0002-canonical-signing-bytes.md
docs/agents/: guardian.md  implementer.md  planner.md  reviewer.md  spec-sync.md  verifier.md
docs/escalations/: template.md
docs/work/: README.md  WI-0001-envelope-validate-docs-and-anchors.md  template.md
