[package]
name = "hmf-device"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ckerens/hmf-ics"
description = "Reference device implementation for the HMF-ICS protocol."
keywords = ["ics", "device", "scada", "protocol"]
categories = ["network-programming"]

[dependencies]
hmf-core = { path = "../../crates/hmf-core" }
hmf-transport = { path = "../../crates/hmf-transport" }
anyhow = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
